--- a/.github/workflows/deploy_to_gcf.yml
+++ b/.github/workflows/deploy_to_gcf.yml
@@ -9,8 +9,10 @@ jobs:
   deploy:
     name: Deploy Function
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v0
@@ -20,5 +22,6 @@ jobs:
         export_default_credentials: true
 
     - name: Deploy to Google Cloud Functions
+      if: github.ref == 'refs/heads/main'
       run: |
         gcloud functions deploy backup_gcf_call --entry-point backup_gcf_call --runtime Nodejs20 --trigger-http --allow-unauthenticated --region us-central1
