--- a/.github/workflows/deploy_to_gcf.yml
+++ b/.github/workflows/deploy_to_gcf.yml
@@ -18,7 +18,7 @@ jobs:
       uses: google-github-actions/setup-gcloud@v0.2.0
       with:
         service_account_key: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS_JSON }}
-        project_id: YOUR_PROJECT_ID
+        project_id: funrepeat-assignment
         export_default_credentials: true
 
     - name: Deploy to GCF (fix branch)
